--- a/css/CircleButtons/style5.css
+++ b/css/CircleButtons/style5.css
@@ -68,7 +68,7 @@
 }
 
 .ch-img-2 { 
-	background-image: url(../CircleButtons/Images/twitter2.jpg);
+	background-image: url(../CircleButtons/Images/twitter2.jpeg);
 }
 
 .ch-img-3 { 
